# iruyan-api/responses/worktime_response.go
@@ -1,6 +1,7 @@
 package responses
 
 import (
+	"iruyan-api/models"
 	"time"
 
 	"github.com/google/uuid"
@@ -24,4 +25,12 @@ type WorkTimeResponseSwagger struct {
 	EntryTime   time.Time `json:"entryTime"`             // RFC3339
 	LeavingTime time.Time `json:"leavingTime,omitempty"` // RFC3339 or nil
 	Duration    string    `json:"duration"`              // formatted like "1h23m"
+}
+
+type WorkTimeListResponse struct {
+	WorkTimes []models.WorkTime `json:"work_times"`
+}
+
+type WorkTimeListResponseSwagger struct {
+	WorkTimes []WorkTimeResponseSwagger `json:"work_times"`
 }
